# smol-cli

./: .gitattributes  .gitignore  AGENT.md  About.md  Architecture.md  Cargo.toml  README.md
src/: agent.rs  answer.rs  chat.rs  config.rs  diff.rs  edits.rs  fsutil.rs  llm.rs  main.rs  tui.rs
src/ui/: app.rs  mod.rs  run.rs  theme.rs
src/ui/app/: actions.rs  draw.rs  input.rs  mod.rs  prompt.rs  review.rs  state.rs
